<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f0f0"
    android:orientation="vertical" >

    <include
        android:id="@+id/personal_top_layout"
        layout="@layout/common_title" />

    <!--
         <LinearLayout
        android:id="@+id/id_title"
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:background="@drawable/head_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dip"
            android:text="@string/register_in_normal"
            android:textColor="#ffffff"
            android:textSize="15.0dip" />
    </LinearLayout>
    -->

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25.0dp"
        android:layout_marginRight="25.0dp"
        android:layout_marginTop="25.0dp"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_top_corner_no_bottom_line"
            android:paddingRight="10.0dp"
            android:paddingLeft="10.0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/register_normal_useraccount"
                android:textSize="@dimen/medium_text_size"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/txtUname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/category_selection_gridview_bg"
                android:hint="@string/register_normal_useraccount_hint"
                android:inputType="number"
                android:textColor="@color/black" />
        </TableRow>


        <!-- <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_no_corner_without_bottom"
            android:paddingRight="10.0dip"
            android:paddingLeft="10dip">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/medium_text_size"
                android:text="@string/register_normal_email"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/category_selection_gridview_bg"
                android:hint="@string/register_normal_email_hint"
                android:textColor="@color/black" />
        </TableRow> -->


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_no_corner_without_bottom"
            android:paddingRight="10.0dp"
            android:paddingLeft="10dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/medium_text_size"
                android:text="@string/register_normal_password"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/txtPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/category_selection_gridview_bg"
                android:hint="@string/register_normal_password_hint"
                android:password="true"
                android:textColor="@color/black" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_bottom_corner_no_top_line"
            android:paddingRight="10.0dp"
            android:paddingLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/medium_text_size"
                android:text="@string/register_normal_repassword"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/txtPwd2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/category_selection_gridview_bg"
                android:hint="@string/register_normal_repassword_hint"
                android:password="true"
                android:textColor="@color/black" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="40.0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/shape_radius_color_square"
        android:gravity="center"
        android:text="@string/register_quick"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>